src/test/ui/stability-attribute/stability-attribute-trait-impl.stderr
error: An `#[unstable]` annotation here has no effect. See issue #55436 <https://github.com/rust-lang/rust/issues/55436> for more information.
  --> $DIR/stability-attribute-trait-impl.rs:24:1
   |
LL | #[unstable(feature = "x", issue = "none")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[deny(rustc::ineffective_unstable_trait_impl)]` on by default

error: aborting due to previous error

